# aimpoint

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
aimpoint/: aimpoint.cpp  aimpoint.h  base_app.cpp  base_app.h  defines.h  log.cpp  log.h  main.cpp  mass_spring_damper.cpp  mass_spring_damper.h  orbit.cpp  orbit.h  physics.cpp  physics.h  planet.cpp  planet.h  rocket.cpp  rocket.h
aimpoint/Core/: Application.cpp  Application.h  Core.h  Event.h  Window.h
aimpoint/Core/Timing/: Clock.cpp
aimpoint/ImGui/: ImGuiLayer.h
aimpoint/Platform/GLFW/: GLFWWindow.h
aimpoint/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
aimpoint/body_type/: rocket.cpp  rocket.h  satellite.cpp  satellite.h  t_bar.cpp  t_bar.h
aimpoint/render/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
data/: Cylinder.mesh  blahaj.mesh  imgui.ini  rocket.mesh  unit_sphere.mesh  vector.mesh
demos/: CMakeLists.txt  flat_earth_launch.cpp  flat_earth_launch.h  flat_earth_rocket.cpp  flat_earth_rocket.h  readme.md  round_earth_launch_flat_approx.cpp  round_earth_launch_flat_approx.h  round_earth_rocket_flat_approx.cpp  round_earth_rocket_flat_approx.h  spinning_rigid_body.cpp  spinning_rigid_body.h
export/: export.bat
solver/: OdeSolver.cpp  RigidBody.cpp  RigidBodySystem.cpp  SystemState.cpp  Utils.cpp
solver/include/solver/: OdeSolver.h  RigidBody.h  RigidBodySystem.h  SystemState.h  Utils.h
src/: Application.cpp  Application.h  EventTypes.h  GraphicsContext.h  Log.cpp  Log.h  event_types.h  main.cpp  window.h
src/Core/: Application.cpp  Log.cpp
src/Core/Timing/: Clock.cpp  Clock.h
src/Math/: Body6DoF.h  RK4.cpp  RK4.h  SignalLogger.h
src/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h
src/Renderer/: Framebuffer.h  RendererContext.cpp  RendererContext.h
src/platform/: window_impl_glfw.cpp  window_impl_glfw.h
